--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ body, html{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .letter{
@@ -49,6 +55,7 @@ body, html{
     margin: 5px 5px;
     width: 50px;
     text-align: center;
+    cursor: pointer;
 }
 
 
