--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: 1px solid red;
 }
 
 body, html{
@@ -19,14 +20,11 @@ body, html{
     margin: 20px;
 }
 
-#game{
-    margin-bottom: 50px;
-}
 #picture{
     margin: 0 auto;
     text-align: center;
     line-height: 0px;
-    height: 290px;
+    max-height: 290px;
 }
 
 #picture img{
@@ -56,28 +54,37 @@ body, html{
     width: 50px;
     text-align: center;
     cursor: pointer;
+    font-weight: 900;
 }
 
 .red{
-    color: red;
+    color:  rgb(99, 9, 9);
+    background-color: rgba(66, 0, 0, 0.8);
+    border: 4px solid rgb(146, 10, 10);
 }
 
 .green{
-    color: greenyellow;
+    color: green;
+    background-color: rgba(77, 196, 41, 0.2);
+    border: 4px solid green;
 }
 
+.message{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    height: 350px;
+    font-size: 1.3em;
+}
 
 @media only screen and (max-width: 450px){
-    p{
-        color: yellow;
-    }
     #keyboard{
         width: auto;
     }
-    #picture img{
+    /* #picture img{
         height: 150px;
         width: auto;
-    }
+    } */
 }
 
 @media only screen and (min-width: 900px){
@@ -85,21 +92,18 @@ body, html{
         height: 350px;
         display: flex;
         justify-content: space-between;
-        align-items: flex-start;
+        /* border: 1px solid red; */
     }
-    #picture{
-        line-height: 30px;
-    }
-    #keyboard{
-        height: 300px;
+    /* #picture,#keyboard{
+        border: 1px solid red;
+    } */
+    #picture img{
+        height: 350px;
     }
 }
 
 @media only screen and (min-width: 1000px)
 {
-    #game{
-        display: flex;
-    }
     #keyboard{
         margin-left: 30px;
     }
