--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body, html{
     }
 }
 
-@media only screen and (max-height: 650px){
+/* @media only screen and (max-height: 650px){
     #img_container, #picture img{
         height: 150px;
         width: auto;
@@ -164,7 +164,7 @@ body, html{
         font-size: 1.4em;
         left: 17%;
     }
-}
+} */
 
 @media only screen and (min-width: 375px) and (min-height: 700px){
     #passwd, #picture{
